# a_game_in_c

./: CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake
res/tile_maps/: tile_map.txt
src/: entity.c  entity.h  entity_factory.c  entity_factory.h  entity_manager.c  entity_manager.h  hash_table.c  hash_table.h  hash_table_test.c  hash_table_test.h  main.c  resource_manager.c  resource_manager.h  sdl_util.c  sdl_util.h  sprite.c  sprite.h  string_util.c  string_util.h  tile_map.c  tile_map.h  vec2.h
